--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Philipp Rathjen Blog</title>
+</head>
+<body>
+
+<h1>Hello World</h1>
+
+</body>
+</html>
