--- a/index.html
+++ b/index.html
@@ -29,34 +29,7 @@
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" style="color:black" href="#">Philipp's Site</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <!-- <a href="https://www.linkedin.com/in/philipp-rathjen-6b369439">About</a> -->
-                    </li>
-                    <li>
-                        <!-- <a href="https://philipprathjen.github.io/masterthesis">Master Thesis</a> -->
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+
 
 
     <!-- Full Width Image Header with Logo -->
@@ -87,6 +60,9 @@
              <a href=""><div class="button1" id='motius'>M</div></a>
              <div class="button1" id='wedding'>W</div>
              <div class="button1" id='button1'>L</div>
+             <div class="button1" id='button1'>A</div>
+             <div class="button1" id='button1'>I</div>
+             <div class="button1" id='button1'>U</div>
        </div>
     </center>
 
