--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
              <a href="http://jamiifarms.com"><div class="button1" id='jamii'>J</div></a>
              <a href="http://www.cdtm.de/blog/"><div class="button1" id='cdtm'>C</div></a>
              <a href="https://www.motius.de/blog/en/"><div class="button1" id='motius'>M</div></a>
-             <div class="button1" id='wedding'>W</div>
+             <div class="button1" id='button1'>W</div>
              <div class="button1" id='button1'>L</div>
              <div class="button1" id='button1'>A</div>
              <div class="button1" id='button1'>I</div>
-             <a href="https://urbaneliteblog.wordpress.com/"><div class="button1" id='urbanelite'>U</div></a>
+             <a href=""><div class="button1" id='button1'>U</div></a>
        </div>
     </center>
 
