--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
              <div class="button1" id='button1'>L</div>
              <div class="button1" id='button1'>A</div>
              <div class="button1" id='button1'>I</div>
-             <a href=""><div class="button1" id='button1'>U</div></a>
+             <a href="https://eurbaninsight.wordpress.com/"><div class="button1" id='eurban'>E</div></a>
        </div>
     </center>
 
@@ -140,11 +140,11 @@
                 $this.text($this.data('initialText'));
             }
         );
-        $('#urbanelite').hover(
+        $('#eurban').hover(
             function() {
                 var $this = $('#project-title'); // caching $(this)
                 $this.data('initialText', $this.text());
-                $this.text("Urban Elite");
+                $this.text("EURBAN Insight");
             },
             function() {
                 var $this = $('#project-title'); // caching $(this)
